--- a/app/styles/main.css
+++ b/app/styles/main.css
@@ -10,41 +10,43 @@ body {
 }
 
 /* Everything but the jumbotron gets side spacing for mobile first views */
-.header,
-.marketing,
-.footer {
+.marketing, .footer {
   padding-left: 15px;
   padding-right: 15px;
-}
-
-/* Custom page header */
-.header {
-  border-bottom: 1px solid #e5e5e5;
-  margin-bottom: 10px;
-}
-/* Make the masthead heading the same height as the navigation */
-.header h3 {
-  margin-top: 0;
-  margin-bottom: 0;
-  line-height: 40px;
-  padding-bottom: 19px;
 }
 
 /* Custom page footer */
 .footer {
   padding-top: 19px;
   color: #777;
-  border-top: 1px solid #e5e5e5;
 }
 
-.container-narrow > hr {
+.container-narrow>hr {
   margin: 30px 0;
 }
 
-/* Main marketing message and sign up button */
 .jumbotron {
   text-align: center;
   border-bottom: 1px solid #e5e5e5;
+  padding: 0.5em 0.6em;
+  h1
+  {
+  font-size
+  :
+  2em;
+}
+
+p {
+  font-size: 1.2em;
+  .
+  btn
+  {
+  padding
+  :
+  0.5em;
+}
+
+}
 }
 .jumbotron .btn {
   font-size: 21px;
@@ -55,8 +57,35 @@ body {
 .marketing {
   margin: 40px 0;
 }
-.marketing p + h4 {
+
+.marketing p+h4 {
   margin-top: 28px;
+}
+
+.column {
+  width: 23.404255319149%; /* 264px / 1128px */
+  float: left;
+  margin-right: 2.127659574468%; /* 24 / 1128px */
+  display: inline-block;
+}
+
+.column:last-child {
+  margin-right: 0;
+}
+
+.rTable {
+  display: table;
+  width: 100%;
+}
+
+.rTableRow {
+  display: table-row;
+}
+
+.rTableCell, .rTableHead {
+  display: table-cell;
+  padding: 3px 10px;
+  border: 1px solid #999999;
 }
 
 /* Responsive: Portrait tablets and up */
@@ -66,18 +95,44 @@ body {
   }
 
   /* Remove the padding we set earlier */
-  .header,
-  .marketing,
-  .footer {
+  .marketing, .footer {
     padding-left: 0;
     padding-right: 0;
   }
-  /* Space out the masthead */
   .header {
-    margin-bottom: 30px;
+    width: 100%;
+    height: 48px;
+    margin-top: 0.6em;
+    margin-bottom: 0.6em;
   }
-  /* Remove the bottom border on the jumbotron for visual effect */
+  .menu {
+    width: 74.468085106383%;
+    float: right;
+  }
+  .menu ul {
+    float: right;
+  }
+  .menu li {
+    font-size: 1.2em;
+    margin-left: 2em;
+    margin-top: 1em;
+    display: inline-block;
+  }
+  .menu li a {
+    color: #999;
+  }
   .jumbotron {
     border-bottom: 0;
   }
+}
+
+//Full HD
+@media screen and (min-width: 1920px) {
+
+
+}
+
+//WVGA
+@media screen and (min-width: 320px) and (max-width: 480px) {
+
 }
